# ds_llm

./: .gitignore  .luarc.json  README.md  modinfo.lua  modmain.lua
.github/: copilot-instructions.md
agent/: README.md  __main__.py  action_parser.py  action_planner.py  action_specs.py  action_writer.py  concrete_action_builder.py  conversation_log.py  debug_cli.py  ds_recipes.py  entity_sets.py  goal_manager.py  goal_planner.py  inventory_tracker.py  llm_agent.py  main.py  memory.py  ollama_client.py  prereq_filter.py  prompt.py  pyproject.toml  state_reader.py  world_tracker.py
agent/fixtures/: day1_fresh.json  day2_spring_inventory.json  low_health_hostile.json  night_no_fire.json  winter_stocked.json
agent/models/: __init__.py  actions.py  state.py
agent/prompt/: __init__.py  builder.py
agent/prompt/sections/: actions.py  base.py  context.py  feedback.py  goals.py  instructions.py  inventory.py  last_action.py  memory.py  nearby.py  status.py  threats.py  tools.py  world_history.py
agent/tests/: test_action_parser.py  test_debug_cli.py  test_goal_manager.py  test_goal_planner.py  test_inventory_tracker.py  test_state_reader.py  test_world_tracker.py
agent/tools/: __init__.py
agent/tools/debug_cli/: README.md  __init__.py  __main__.py  cli.py  llm_client.py  pipeline.py  state_loader.py
agent/tools/debug_cli/formatters/: __init__.py  actions_formatter.py  base.py  json_formatter.py  prompt_formatter.py  text_formatter.py
mod_api_docs/: README.md  brains.md  components.md  file-io.md  getting-started-klei.md  inventory.md  map.md  mod-structure.md  (+7 more)
(+12 files in other folders)
