[project]
name = "agent"
version = "0.1.0"
description = "The Python autonomous agent that controls the Don't Starve AI via LLM reasoning."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.27",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
